--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,11 @@ services:
       - '6443:443'
     environment:
       - PHPLDAPADMIN_LDAP_HOSTS=ldap
+  gitlab:
+    image: gitlab/gitlab-ce
+    ports:
+      - '8080:80'
+    volumes:
+      - ./gitlab/gitlab_home/config:/etc/gitlab
+      - ./gitlab/gitlab_home/logs:/var/logs/gitlab
+      - ./gitlab/gitlab_home/data:/var/opt/gitlab
