add rocket chat

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,3 +22,28 @@ services:
       - ./gitlab/gitlab_home/config:/etc/gitlab
       - ./gitlab/gitlab_home/logs:/var/logs/gitlab
       - ./gitlab/gitlab_home/data:/var/opt/gitlab
+  rocketchat:
+    image: registry.rocket.chat/rocketchat/rocket.chat
+    ports:
+      - '3000:3000'
+    environment:
+      - MONGO_URL=mongodb://mongodb:27017/rockerchat?replicaSet=rs0
+      - MONGO_OPLOG_URL=mongodb://mongodb:27017/local?replicaSet=rs0
+      - ROOT_URL=http://localhost:3000
+      - POST=3000
+      - DEPLOY_METHOD=docker
+    depends_on:
+      - mongodb
+  mongodb:
+    image: docker.io/bitnami/mongodb:4.4
+    volumes:
+      - mongodb_data:/bitnami/mongodb
+    environment:
+      - MONGODB_REPLICA_SET_MODE=primary
+      - MONGODB_REPLICA_SET_NAME=rs0
+      - MONGODB_PORT_NUMBER=27017
+      - MONGODB_INITIAL_PRIMARY_HOST=mongodb
+      - MONGODB_INITIAL_PRIMARY_PORT_NUMBER=27017
+      - MONGODB_ADVERTISED_HOSTNAME=mongodb
+      - MONGODB_ENABLE_JOURNAL=true
+      - ALLOW_EMPTY_PASSWORD=yes
