update rocket chat

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,3 +47,6 @@ services:
       - MONGODB_ADVERTISED_HOSTNAME=mongodb
       - MONGODB_ENABLE_JOURNAL=true
       - ALLOW_EMPTY_PASSWORD=yes
+
+volumes:
+  mongodb_data: {}
